2. Трекер SQL [#307886]